--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/louvorjk/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -16,7 +16,7 @@
 
 <body>
   <header class="header">
-    <img src="/louvorjk/svg/ipjk logo.svg" alt="Igreja Presbiteriana do Jk">
+    <img src="./svg/ipjk logo.svg" alt="Igreja Presbiteriana do Jk">
     <nav>
       <ul class="header-menu">
         <li><a href="#escala">Escala</a></li>
