--- a/index.html
+++ b/index.html
@@ -66,27 +66,45 @@
         <li>
           <p class="lista-titulo"> <strong>Nome</strong><span>Todavia me alegrarei</span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span>Samuel Messias</span></p>
-          <p class="lista-titulo"> <strong>Cifra Club</strong><a href="https://www.cifraclub.com.br/samuel-messias/todavia-me-alegrarei/">Acessar Cifra</a></p>
-          <p class="lista-titulo"> <strong>Youtube</strong><a href="https://www.youtube.com/watch?v=81GaF34veWA">Acessar Vídeo</a></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/samuel-messias/todavia-me-alegrarei/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=81GaF34veWA">Acessar
+                Vídeo</a></p>
+          </div>
         </li>
         <li>
           <p class="lista-titulo"> <strong>Nome</strong><span>A Ele a glória</span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span>Diante do Trono</span></p>
-          <p class="lista-titulo"> <strong>Cifra Club</strong><a href="https://www.cifraclub.com.br/diante-do-trono/a-ele-gloria/">Acessar cifra</a></p>
-          <p class="lista-titulo"> <strong>Youtube</strong><a href="https://www.youtube.com/watch?v=Q_MerFW9qA4&t=109s">Acessar Vídeo</a></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/diante-do-trono/a-ele-gloria/">Acessar cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=Q_MerFW9qA4&t=109s">Acessar Vídeo</a></p>
+          </div>
         </li>
         <li>
           <p class="lista-titulo"> <strong>Nome</strong><span>Tua Obra em nós</span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
-          <p class="lista-titulo"> <strong>Cifra Club</strong><a href="https://www.cifraclub.com.br/projeto-sola/tua-obra-em-nos/">Acessar Cifra</a></p>
-          <p class="lista-titulo"> <strong>Youtube</strong><a href="https://www.youtube.com/watch?v=bPiMH3Mh1ao">Acessar Vídeo</a></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/projeto-sola/tua-obra-em-nos/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=bPiMH3Mh1ao">Acessar
+                Vídeo</a></p>
+          </div>
         </li>
         <li>
           <p class="lista-titulo"> <strong>Nome</strong><span>Galileu</span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span>Fernandinho</span></p>
-          <p class="lista-titulo"> <strong>Cifra Club</strong><a href="https://www.cifraclub.com.br/fernandinho/galileu/">Acessar Cifra</a></p>
-          <p class="lista-titulo"> <strong>Youtube</strong><a href="https://www.youtube.com/watch?v=bOFbr2RpLek">Acessar Vídeo</a></p>
-        </li>
+          <div class="musica-link">
+          <p class="lista-titulo"> <strong>Cifra Club</strong><a
+              href="https://www.cifraclub.com.br/fernandinho/galileu/">Acessar Cifra</a></p>
+          <p class="lista-titulo"> <strong>Youtube</strong><a href="https://www.youtube.com/watch?v=bOFbr2RpLek">Acessar
+              Vídeo</a></p>
+            </div>
+            </li>
         <!-- <li>
           <p class="lista-titulo"> <strong>Nome</strong><span></span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span></span></p>
