--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h2>Louvor IPJK</h2>
   </main>
 
-  <section class="escala" id="escala">
+  <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
       <span class="data">07/05/2023</span>
@@ -58,7 +58,7 @@
     </ul>
   </section>
 
-  <section class="musica" id="musica">
+  <section class="musica" id="musica" aria-label="Músicas">
     <div class="musica-titulo">
       <h3 class="tituloh3">música<span class="decoration">.</span></h3>
     </div>
@@ -100,23 +100,64 @@
           <p class="lista-titulo"> <strong>Nome</strong><span>Galileu</span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span>Fernandinho</span></p>
           <div class="musica-link">
-          <p class="lista-titulo"> <strong>Cifra Club</strong><a
-              href="https://www.cifraclub.com.br/fernandinho/galileu/">Acessar Cifra</a></p>
-          <p class="lista-titulo"> <strong>Youtube</strong><a href="https://www.youtube.com/watch?v=bOFbr2RpLek">Acessar
-              Vídeo</a></p>
-            </div>
-            </li>
-        <!-- <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span></span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span></span></p>
-          <p class="lista-titulo"> <strong>Cifra Club</strong><a href="#"></a></p>
-          <p class="lista-titulo"> <strong>Youtube</strong><a href="#"></a></p>
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/fernandinho/galileu/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=bOFbr2RpLek">Acessar
+                Vídeo</a></p>
+          </div>
         </li>
-         -->
       </ul>
     </div>
   </section>
 
+  <section class="organizacao">
+    <div class="organizacao-titulo">
+      <h3 class="tituloh3 decoration">
+        organização<span class="decoration">.</span>
+      </h3>
+    </div>
+    <ul class="organizacao-lista">
+      <li>
+        <h4><strong> 1 - EQUIPAMENTOS </strong></h4>
+        <p><strong>1.1</strong> - É de responsabilidade dos membros escalados e/ou atuando no dia, o zelo e cuidado com
+          os equipamentos (cabo, instrumento, microfone, bateria e entre outros)</p>
+        <p> <strong>1.2</strong> - Ao término do louvor, desligar os equipamentos que não serão utilizados e guardar os
+          instrumentos, microfones, em seus respectivos locais (apoios) para continuidade do culto</p>
+        <p>
+          <strong>1.3</strong> - Ao término do culto/ensaio colocar os equipamentos em suas capas (se tiverem), e no
+          quartinho atrás da mesa de som (se necessário); Os microfones utilizados deverão estar no suporte e os cabos
+          dos microfones enrolados devidamente, e também colocados no suporte para microfones
+        </p>
+        <p>
+          <strong>1.4</strong> - Ao responsável pelo Datashow, desligar os equipamentos no fim das atividades
+        </p>
+      </li>
+      <li>
+        <h4><strong> 2 - CONSERVAÇÃO</strong></h4>
+        <p>
+          <strong>2.1</strong> - Preserve sempre os equipamentos e instrumentos organizados, bem como suportes,
+          pedestais e cabos não atrapalhando o transitar de pessoas, causando acidentes
+        </p>
+      </li>
+      <li>
+        <h4><strong> 3 - PILHAS E BATERIAS</strong></h4>
+        <p><strong>3.1</strong> - As pilhas e baterias da igreja são recarregáveis </p>
+        <p><strong>3.2</strong> - As pilhas e baterias na mesa em frente ao notebook estão organizadas em </p>
+        <p><strong>3.2.1</strong> - Lado Vermelho: As pilhas e baterias nesse lado estão DESCARREGADAS </p>
+        <p><strong>3.2.2</strong> - Lado Verde: As pilhas e baterias nesse lado estão CARREGADAS </p>
+        <p><strong>3.3 </strong> - As pilhas e baterias no lado vermelho deverão ser carregadas e estarão carregadas
+          quando a luz do
+          carregador se apagar</p>
+      </li>
+      <li>
+        <h4><strong>4 - MESA DE SOM</strong></h4>
+        <p><strong>4.1</strong> - Ao responsável atuante no dia pela mesa de som, o bom funcionamento do som da igreja e
+          desligar\ligar no fim e inicio das atividades </p>
+      </li>
+
+    </ul>
+  </section>
 </body>
 
 </html>
