add id organizacao

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
   </section>
 
-  <section class="organizacao">
+  <section class="organizacao" id="organizacao">
     <div class="organizacao-titulo">
       <h3 class="tituloh3 decoration">
         organização<span class="decoration">.</span>
