--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
       </ul>
     </nav>
   </header>
-
   <main class="introducao">
     <h1>UMA FAMÍLIA EM CRESCIMENTO</h1>
     <h2>Louvor IPJK</h2>
   </main>
-
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
@@ -57,7 +55,6 @@
       </li>
     </ul>
   </section>
-
   <section class="musica" id="musica" aria-label="Músicas">
     <div class="musica-titulo">
       <h3 class="tituloh3">música<span class="decoration">.</span></h3>
@@ -110,7 +107,6 @@
       </ul>
     </div>
   </section>
-
   <section class="organizacao" id="organizacao">
     <div class="organizacao-titulo">
       <h3 class="tituloh3 decoration">
@@ -155,9 +151,14 @@
         <p><strong>4.1</strong> - Ao responsável atuante no dia pela mesa de som, o bom funcionamento do som da igreja e
           desligar\ligar no fim e inicio das atividades </p>
       </li>
-
     </ul>
   </section>
+  <footer class="footer">
+    <div class="footer-container">
+      <img src="./svg/ipb icone.svg" alt="">
+      <span>2023 © Igreja Presbiteriana do JK - Todos os direitos reservados.</span>
+    </div>
+  </footer>
 </body>
 
 </html>
