Att escala e musicas p/ 14-05-2023

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">07/05/2023</span>
+      <span class="data">14/05/2023</span>
     </div>
     <ul class="escala-lista">
-      <li>Violão <p>Vinicius</p>
-        <p>Letycia</p>
+      <li>Violão <p>Julio</p>
+        <p>Vicente</p>
       </li>
       <li>Baixo <p>Viviane</p>
       </li>
-      <li>Guitarra <p>Julio</p>
+      <li>Guitarra <p>Vinicius</p>
       </li>
       <li>Som <p> </p>
       </li>
       <li>Bateria <p>Vitor</p>
       </li>
-      <li>Voz <p>Eliseu</p>
+      <li>Voz
         <p>Elizete</p>
         <p>Daniele</p>
       </li>
@@ -62,45 +62,56 @@
     <div>
       <ul class="musica-lista">
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Todavia me alegrarei</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Samuel Messias</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Rendido Estou</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Aline Barros</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/samuel-messias/todavia-me-alegrarei/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/rendido-estou/aline-barros/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=81GaF34veWA">Acessar
+                href="https://www.youtube.com/watch?v=J-qDkZArRrM">Acessar
                 Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>A Ele a glória</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Diante do Trono</span></p>
-          <div class="musica-link">
-            <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/diante-do-trono/a-ele-gloria/">Acessar cifra</a></p>
-            <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=Q_MerFW9qA4&t=109s">Acessar Vídeo</a></p>
-          </div>
-        </li>
-        <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Tua Obra em nós</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
-          <div class="musica-link">
-            <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/projeto-sola/tua-obra-em-nos/">Acessar Cifra</a></p>
-            <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=bPiMH3Mh1ao">Acessar
-                Vídeo</a></p>
-          </div>
-        </li>
-        <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Galileu</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Pra Sempre</span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span>Fernandinho</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/fernandinho/galileu/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/fernandinho/pra-sempre/">Acessar cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=bOFbr2RpLek">Acessar
+                href="https://www.youtube.com/watch?v=vglVAX44cLo">Acessar Vídeo</a></p>
+          </div>
+        </li>
+        <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Lugar Seguro</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Aline Barros</span></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/aline-barros/lugar-seguro/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=bJxgWOC6b3U">Acessar
+                Vídeo</a></p>
+          </div>
+        </li>
+        <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Maravilhosa Graça</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Drops</span></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/drops-gl-adolescentes/maravilhosa-graca/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=nv-T2_JPKZA">Acessar
+                Vídeo</a></p>
+          </div>
+        </li>
+         <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Me Derramar</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Vineyard</span></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/vineyard/me-derramar//">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=LJyK6vZRFSw">Acessar
                 Vídeo</a></p>
           </div>
         </li>
