Att escala e musicas 16-05-2023.html

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">14/05/2023</span>
+      <span class="data">21/05/2023</span>
     </div>
     <ul class="escala-lista">
-      <li>Violão <p>Julio</p>
-        <p>Vicente</p>
+      <li>Violão <p>Vinicius</p>
+        <p>Samira</p>
       </li>
       <li>Baixo <p>Viviane</p>
       </li>
-      <li>Guitarra <p>Vinicius</p>
+      <li>Guitarra <p>Vicente</p>
       </li>
       <li>Som <p> </p>
       </li>
@@ -49,9 +49,9 @@
       </li>
       <li>Voz
         <p>Elizete</p>
-        <p>Daniele</p>
+        <p>Elizeu</p>
       </li>
-      <li>Slide <p>Nicolas</p>
+      <li>Slide <p>Kamille</p>
       </li>
     </ul>
   </section>
@@ -62,56 +62,56 @@
     <div>
       <ul class="musica-lista">
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Rendido Estou</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Aline Barros</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Deus do Impossível</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Trazendo a arca</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/rendido-estou/aline-barros/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/toque-no-altar/deus-do-impossivel/>Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=J-qDkZArRrM">Acessar
+                href="https://www.youtube.com/watch?v=86cV2HXMcQ8">Acessar
                 Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Pra Sempre</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Fernandinho</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Eu me alegro em Ti</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Ministério Shalom</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/fernandinho/pra-sempre/">Acessar cifra</a></p>
+                href="https://www.cifraclub.com.br/ministerio-de-louvor-shalom/eu-me-alegro-em-ti/">Acessar cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=vglVAX44cLo">Acessar Vídeo</a></p>
+                href="https://www.youtube.com/watch?v=b1d6C681f4Y&t=1s">Acessar Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Lugar Seguro</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Aline Barros</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Quero descer</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Raquel Mello</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/aline-barros/lugar-seguro/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/raquel-mello/quero-descer/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=bJxgWOC6b3U">Acessar
+                href="https://www.youtube.com/watch?v=hq3iPlZKqSM">Acessar
                 Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Maravilhosa Graça</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Drops</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Amo o Senhor</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Fernanda Brum</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/drops-gl-adolescentes/maravilhosa-graca/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/fernanda-brum/amo-senhor/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=nv-T2_JPKZA">Acessar
+                href="https://www.youtube.com/watch?v=peOcn4hFV_Q&t=1s">Acessar
                 Vídeo</a></p>
           </div>
         </li>
          <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Me Derramar</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Vineyard</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Abra os olhos do meu coração</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>David Quinlan</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/vineyard/me-derramar//">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/david-quinlan/abra-os-olhos-do-meu-coracao/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=LJyK6vZRFSw">Acessar
+                href="https://www.youtube.com/watch?v=OdPk0Jt9Txk">Acessar
                 Vídeo</a></p>
           </div>
         </li>
