correção link.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p class="lista-titulo"> <strong>Autor</strong><span>Trazendo a arca</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/toque-no-altar/deus-do-impossivel/>Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/toque-no-altar/deus-do-impossivel/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
                 href="https://www.youtube.com/watch?v=86cV2HXMcQ8">Acessar
                 Vídeo</a></p>
