Add integrante voz

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <li>Voz
         <p>Elizete</p>
         <p>Elizeu</p>
+        <p>Brendinha</p>
       </li>
       <li>Slide <p>Kamille</p>
       </li>
