Att escala e musicas p 28/05/2023

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     </div>
     <ul class="escala-lista">
       <li>Violão <p>Vinicius</p>
-        <p>Samira</p>
+        <p>Julio</p>
       </li>
       <li>Baixo <p>Viviane</p>
       </li>
-      <li>Guitarra <p>Vicente</p>
+      <li>Guitarra <p>Letycia</p>
       </li>
       <li>Som <p> </p>
       </li>
       <li>Bateria <p>Vitor</p>
       </li>
       <li>Voz
+        <p>Daniele</p>
         <p>Elizete</p>
-        <p>Elizeu</p>
         <p>Brendinha</p>
       </li>
       <li>Slide <p>Kamille</p>
@@ -63,56 +63,45 @@
     <div>
       <ul class="musica-lista">
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Deus do Impossível</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Trazendo a arca</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Canção do apocalipse</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Diante do trono</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/toque-no-altar/deus-do-impossivel/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/diante-do-trono/cancao-do-apocalipse/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=86cV2HXMcQ8">Acessar
+                href="https://www.youtube.com/watch?v=Xq9GhkjPNlw">Acessar
                 Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Eu me alegro em Ti</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Ministério Shalom</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Redenção</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/ministerio-de-louvor-shalom/eu-me-alegro-em-ti/">Acessar cifra</a></p>
+                href="https://www.cifraclub.com.br/projeto-sola/redencao/">Acessar cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=b1d6C681f4Y&t=1s">Acessar Vídeo</a></p>
+                href="https://www.youtube.com/watch?v=2FQpBK3Mmp8">Acessar Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Quero descer</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Raquel Mello</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Quão grande é o meu Deus</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Soraya Moraes</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/raquel-mello/quero-descer/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/soraya-moraes/quao-grande-o-meu-deus/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=hq3iPlZKqSM">Acessar
+                href="https://www.youtube.com/watch?v=IT827htf_S8">Acessar
                 Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Amo o Senhor</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Fernanda Brum</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Eu me alegro em ti</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Ministério louvor shalom / Ibab Celebração</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/fernanda-brum/amo-senhor/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/ministerio-de-louvor-shalom/eu-me-alegro-em-ti/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=peOcn4hFV_Q&t=1s">Acessar
-                Vídeo</a></p>
-          </div>
-        </li>
-         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Abra os olhos do meu coração</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>David Quinlan</span></p>
-          <div class="musica-link">
-            <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/david-quinlan/abra-os-olhos-do-meu-coracao/">Acessar Cifra</a></p>
-            <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=OdPk0Jt9Txk">Acessar
+                href="https://www.youtube.com/watch?v=CgFhsjN82RE">Acessar
                 Vídeo</a></p>
           </div>
         </li>
