Att escala e musicas incompleto

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">28/05/2023</span>
+      <span class="data">04/06/2023</span>
     </div>
     <ul class="escala-lista">
-      <li>Violão <p>Vinicius</p>
-        <p>Julio</p>
+      <li>Violão <p>Samira</p>
+        <p>Vinicius</p>
       </li>
       <li>Baixo <p>Viviane</p>
       </li>
-      <li>Guitarra <p>Letycia</p>
+      <li>Guitarra <p>Julio</p>
       </li>
       <li>Som <p> </p>
       </li>
@@ -50,9 +50,9 @@
       <li>Voz
         <p>Daniele</p>
         <p>Elizete</p>
-        <p>Brendinha</p>
+        <p>Eliseu</p>
       </li>
-      <li>Slide <p>Kamille</p>
+      <li>Slide <p>Nicolas</p>
       </li>
     </ul>
   </section>
@@ -62,49 +62,19 @@
     </div>
     <div>
       <ul class="musica-lista">
+        
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Canção do apocalipse</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Diante do trono</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Ainda que a figueira</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Fernandinho</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/diante-do-trono/cancao-do-apocalipse/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/fernandinho/ainda-que-figueira-/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=Xq9GhkjPNlw">Acessar
+                href="https://www.youtube.com/watch?v=hFwNSQVi0q0">Acessar
                 Vídeo</a></p>
           </div>
         </li>
-        <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Redenção</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
-          <div class="musica-link">
-            <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/projeto-sola/redencao/">Acessar cifra</a></p>
-            <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=2FQpBK3Mmp8">Acessar Vídeo</a></p>
-          </div>
-        </li>
-        <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Quão grande é o meu Deus</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Soraya Moraes</span></p>
-          <div class="musica-link">
-            <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/soraya-moraes/quao-grande-o-meu-deus/">Acessar Cifra</a></p>
-            <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=IT827htf_S8">Acessar
-                Vídeo</a></p>
-          </div>
-        </li>
-        <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Eu me alegro em ti</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Ministério louvor shalom / Ibab Celebração</span></p>
-          <div class="musica-link">
-            <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/ministerio-de-louvor-shalom/eu-me-alegro-em-ti/">Acessar Cifra</a></p>
-            <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=CgFhsjN82RE">Acessar
-                Vídeo</a></p>
-          </div>
-        </li>
+     
       </ul>
     </div>
   </section>
