att escala e musicas p dia 04/06/2023

--- a/index.html
+++ b/index.html
@@ -74,6 +74,37 @@
                 Vídeo</a></p>
           </div>
         </li>
+          <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Nada além do sangue</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Fernandinho</span></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/fernandinho/nada-alem-do-sangue/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=WhVtdWdST44">Acessar
+                Vídeo</a></p>
+          </div>
+        </li>  <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Reina em mim</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Vineyard</span></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/vineyard/reina-em-mim/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=bpabvrhSJ6Y&t=19s">Acessar
+                Vídeo</a></p>
+          </div>
+        </li>  <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Teu Reino</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Ministério Teu Reino</span></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/ministerio-teu-reino/teu-reino/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=lMhEFpHzRsY&t=34s">Acessar
+                Vídeo</a></p>
+          </div>
+        </li>
      
       </ul>
     </div>
