--- a/index.html
+++ b/index.html
@@ -33,22 +33,21 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">04/06/2023</span>
+      <span class="data">11/06/2023</span>
     </div>
     <ul class="escala-lista">
-      <li>Violão <p>Samira</p>
-        <p>Vinicius</p>
+      <li>Violão <p>Julio</p>
+        <p>Letycia</p>
       </li>
-      <li>Baixo <p>Viviane</p>
+      <li>Baixo <p>Vinicius</p>
       </li>
-      <li>Guitarra <p>Julio</p>
+      <li>Guitarra <p>Vicente</p>
       </li>
       <li>Som <p> </p>
       </li>
       <li>Bateria <p>Vitor</p>
       </li>
       <li>Voz
-        <p>Daniele</p>
         <p>Elizete</p>
         <p>Eliseu</p>
       </li>
@@ -64,44 +63,44 @@
       <ul class="musica-lista">
         
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Ainda que a figueira</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Fernandinho</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Tua Obra em Nós</span></p>
+            <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/fernandinho/ainda-que-figueira-/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/projeto-sola/tua-obra-em-nos/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=hFwNSQVi0q0">Acessar
+                href="https://www.youtube.com/watch?v=bPiMH3Mh1ao">Acessar
                 Vídeo</a></p>
           </div>
         </li>
           <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Nada além do sangue</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Fernandinho</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Maravilhoso És</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Ministério Koynonia</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/fernandinho/nada-alem-do-sangue/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/ministerio-koinonya-de-louvor/maravilhoso-s/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=WhVtdWdST44">Acessar
+                href="https://www.youtube.com/watch?v=QT0Cn5X2h1I">Acessar
                 Vídeo</a></p>
           </div>
         </li>  <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Reina em mim</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Quebrantado</span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span>Vineyard</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/vineyard/reina-em-mim/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/vineyard/quebrantado/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=bpabvrhSJ6Y&t=19s">Acessar
+                href="https://www.youtube.com/watch?v=QbnmpJo3DiI">Acessar
                 Vídeo</a></p>
           </div>
         </li>  <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Teu Reino</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Ministério Teu Reino</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Teu Amor não falha</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Nívea Soares</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/ministerio-teu-reino/teu-reino/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/nivea-soares/teu-amor-nao-falha/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=lMhEFpHzRsY&t=34s">Acessar
+                href="https://www.youtube.com/watch?v=3q-pRKf-VaQ">Acessar
                 Vídeo</a></p>
           </div>
         </li>
