--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">11/06/2023</span>
+      <span class="data">18/06/2023</span>
     </div>
     <ul class="escala-lista">
       <li>Violão <p>Julio</p>
-        <p>Letycia</p>
+        <p>Vinicius</p>
       </li>
-      <li>Baixo <p>Vinicius</p>
+      <li>Baixo <p>Viviane</p>
       </li>
-      <li>Guitarra <p>Vicente</p>
+      <li>Guitarra <p>Letycia</p>
       </li>
       <li>Som <p> </p>
       </li>
@@ -50,6 +50,7 @@
       <li>Voz
         <p>Elizete</p>
         <p>Eliseu</p>
+        <p>Brendinha</p>
       </li>
       <li>Slide <p>Nicolas</p>
       </li>
@@ -74,23 +75,23 @@
           </div>
         </li>
           <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Maravilhoso És</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Ministério Koynonia</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Isaias 53</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/ministerio-koinonya-de-louvor/maravilhoso-s/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/projeto-sola/isaias-53/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=QT0Cn5X2h1I">Acessar
+                href="https://www.youtube.com/watch?v=bvki6GuGsn0">Acessar
                 Vídeo</a></p>
           </div>
         </li>  <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Quebrantado</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Vineyard</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Ele é exaltado</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Adhemar de Campos</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/vineyard/quebrantado/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/adhemar-de-campos/ele-exaltado/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=QbnmpJo3DiI">Acessar
+                href="https://www.youtube.com/watch?v=22c5Flzd8Iw">Acessar
                 Vídeo</a></p>
           </div>
         </li>  <li>
